--- a/base-pkg-kvm/roles/python/tasks/main.yml
+++ b/base-pkg-kvm/roles/python/tasks/main.yml
@@ -5,6 +5,7 @@
        - python3-dev
        - python3-pip
        - python3.7-dev
+       - python3.7-venv
        - python3-scp
        - python3-paramiko
        - python3-pandas
