--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 sonic_api/draft_main.py
 sonic_api/sonic_data_old_16_jun_2022.xlsx
 sonic_api/sonic_data_home_network.xlsx
+sonic_api/sonic_data_v0.1.xlsx
